# CppTorchTest

./: CMakeLists.txt  Readme.md  main.cpp
